--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "talentbridge-client",
+  "name": "solosphere-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
